--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "gitflow4code.features": [
-        {
-            "name": "feature/TestFeatureKTV",
-            "base": "develop"
-        }
-    ]
+    "gitflow4code.features": []
 }
